<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.4</version>
		<relativePath/>
	</parent>

	<groupId>ovh.excale</groupId>
	<artifactId>vgreeter</artifactId>
	<version>26.4.2-SNAPSHOT</version>

	<name>VGreeter</name>
	<description>Let the bot greet your friends when they join vocal chat on Discord!</description>
	<url>https://github.com/devExcale/VGreeter</url>
	<packaging>jar</packaging>

	<scm>
		<connection>scm:git:${project.url}</connection>
	</scm>

	<properties>
		<java.version>25</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jdave.version>0.1.8</jdave.version>
	</properties>

	<dependencies>

		<!-- Spring -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<!-- Discord -->
		<dependency>
			<groupId>net.dv8tion</groupId>
			<artifactId>JDA</artifactId>
			<version>6.4.1</version>
		</dependency>
		<dependency>
			<groupId>club.minnced</groupId>
			<artifactId>jdave-api</artifactId>
			<version>${jdave.version}</version>
		</dependency>

		<!-- Opus processing -->
		<dependency>
			<groupId>org.gagravarr</groupId>
			<artifactId>vorbis-java-core</artifactId>
			<version>0.8</version>
		</dependency>
		<dependency>
			<groupId>org.gagravarr</groupId>
			<artifactId>vorbis-java-tools</artifactId>
			<version>0.8</version>
		</dependency>

		<!-- JSON parsing -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>

		<!-- UUID-7 Generation -->
		<dependency>
			<groupId>com.fasterxml.uuid</groupId>
			<artifactId>java-uuid-generator</artifactId>
			<version>5.1.0</version>
		</dependency>

		<!-- Environment -->
		<dependency>
			<groupId>me.paulschwarz</groupId>
			<artifactId>spring-dotenv</artifactId>
			<version>2.3.0</version>
		</dependency>

		<!-- PostgreSQL Driver -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.7.7</version>
		</dependency>

		<!-- Better code -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.44</version>
			<scope>provided</scope>
		</dependency>

		<!-- Test -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-test-autoconfigure</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-data-jpa-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<finalName>${project.name}-${project.version}</finalName>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
			</resource>
			<resource>
				<directory>src/main/resources-filtered</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
				<configuration>
					<release>${java.version}</release>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.44</version>
						</path>
						<path>
							<groupId>org.springframework.boot</groupId>
							<artifactId>spring-boot-configuration-processor</artifactId>
							<version>${project.parent.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<profiles>
		<profile>
			<id>win-x86-64</id>
			<dependencies>
				<dependency>
					<groupId>club.minnced</groupId>
					<artifactId>jdave-native-win-x86-64</artifactId>
					<version>${jdave.version}</version>
				</dependency>
			</dependencies>
		</profile>

		<profile>
			<id>linux-x86-64</id>
			<dependencies>
				<dependency>
					<groupId>club.minnced</groupId>
					<artifactId>jdave-native-linux-x86-64</artifactId>
					<version>${jdave.version}</version>
				</dependency>
			</dependencies>
		</profile>

		<profile>
			<id>linux-aarch64</id>
			<dependencies>
				<dependency>
					<groupId>club.minnced</groupId>
					<artifactId>jdave-native-linux-aarch64</artifactId>
					<version>${jdave.version}</version>
				</dependency>
			</dependencies>
		</profile>
	</profiles>

</project>